--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express-validator": "^7.2.1",
     "googleapis": "^146.0.0",
