Creación de usuario para tests
Algunos que otros retoques dado que no me di cuenta de que se estaban guardando los datos en la BBDD principal en vez de la de tests.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --watch index.js",
-    "test": "cross-env NODE_ENV=test jest -verbose --all"
+    "test": "cross-env NODE_ENV=test jest -verbose --all --runningBan"
   },
   "keywords": [],
   "author": "",
