--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.12.1",
     "mongoose-delete": "^1.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "pdfkit": "^0.17.1"
   }
 }
