añadimos el slack para poder registrar los errores http 5XX

--- a/.env_example
+++ b/.env_example
@@ -17,3 +17,5 @@ JWT_SECRET -> Clave para verificar y firmar los token JWT
 PINATA_KEY -> Clave API de PINATA
 PINATA_SECRET -> Secreto API de PINATA
 PINATA_GATEWAY_URL -> URL para acceder a los archivos subidos a IPFS
+
+SLACK_WEBHOOK -> API de Slack
