--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "supertest": "^7.1.0"
   },
   "dependencies": {
+    "@slack/webhook": "^7.0.5",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "mongoose-delete": "^1.0.2",
+    "morgan-body": "^2.6.9",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.17.1"
